@@ -22,8 +22,8 @@ screen.refresh.interval = 100
 renderengine.type = PATHCPU
 sampler.type = SOBOL
 path.pathdepth.total = 24
-#path.hybridbackforward.enable = 1
-#path.hybridbackforward.partition = 0.0
+path.hybridbackforward.enable = 1
+path.hybridbackforward.partition = 0.0
 #path.pathspaceregularization.enable = 1
 #path.pathspaceregularization.scale = 2.5
 path.clamping.variance.maxvalue = 5
@@ -46,11 +46,12 @@ path.photongi.indirect.enabled = 0
 path.photongi.caustic.enabled = 1
 #path.photongi.caustic.lookup.normalangle = 9.9999997090929202
 path.photongi.caustic.lookup.normalangle = 30
-path.photongi.caustic.lookup.radius = 0.4
-path.photongi.caustic.maxsize = 100000
-path.photongi.caustic.updatespp = 16
+path.photongi.caustic.lookup.radius = 0.2
+path.photongi.caustic.maxsize = 1000000
+path.photongi.caustic.updatespp = 32
 path.photongi.caustic.updatespp.rediusreduction = 0.99
 path.photongi.caustic.updatespp.minradius = 0.1
+path.photongi.caustic.useonlyforsds = 1
 #
 #path.photongi.debug.type = showindirect
 #path.photongi.debug.type = showcaustic
