@@ -15,6 +15,7 @@ scene.materials.Cubo_Prism_01_MAT.kr = 1. 1. 1.
 scene.materials.Cubo_Prism_01_MAT.kt = 0.8 0.8 0.8
 scene.materials.Cubo_Prism_01_MAT.ioroutside = 1.0
 scene.materials.Cubo_Prism_01_MAT.iorinside = 1.45
+scene.materials.Cubo_Prism_01_MAT.cauchyc = 0.025
 scene.materials.Light_01_MAT.emission = 24000.0 24000.0 24000.0
 scene.materials.Ground_01_MAT.kd = tex
 ################################################################################
